# utility-pole-ai-photogrammetry

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/sample/: manual_diameter.csv
data/sample/pole_width/: ground_truth_diameter.csv
models/: README.md
results/width_estimation/analysis/: diameter_error_metrics.csv
src/: AI.py  app.py  cli.py  diameter.py  main.py  tilt.py  vanishingpoint.py  video.py  vis.py
