[tool.poetry]
name = "osmose-pole-diameter"
version = "0.1.0"
description = "A.I. estimate utility pole diameter for Osmose"
authors = ["Ashish Gupta <ashishanilgupta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
ultralytics = "^8.2.51"
opencv-python = "^4.10.0.84"
supervision = "^0.21.0"
clip = {git = "https://github.com/ultralytics/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
