[tool.poetry]
name = "utility-pole-ai-photogrammetry"
version = "1.0.0"
description = "AI photogrammetry for utility poles: width estimation and tilt angle measurement"
authors = ["Ashish Gupta <ashishanilgupta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
ultralytics = "^8.2.51"
opencv-python = "^4.10.0.84"
supervision = "^0.21.0"
scikit-image = "^0.24.0"
matplotlib = "^3.8"
pandas = "^2.0"
clip = {git = "https://github.com/ultralytics/CLIP.git"}
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
