[project]
name = "utility-pole-ai-photogrammetry"
version = "1.0.0"
description = "AI photogrammetry for utility poles: width estimation and tilt angle measurement"
authors = [{ name = "Ashish Gupta", email = "ashishanilgupta@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "ultralytics>=8.2.51",
    "opencv-python>=4.10.0.84",
    "supervision>=0.21.0",
    "scikit-image>=0.24.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "clip @ git+https://github.com/ultralytics/CLIP.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# CLIP is installed from GitHub; uv handles PEP 440 direct references natively.
# If torch/torchvision need the CUDA index, uncomment and set the appropriate URL:
# extra-index-url = ["https://download.pytorch.org/whl/cu121"]
